--- a/Views/Computer/Index.cshtml
+++ b/Views/Computer/Index.cshtml
@@ -8,7 +8,10 @@
 
 @if(Model.Count() == 0)
 {
-    <p>Nenhum computador cadastrado.</p>
+    <table class=table>
+        <tr><td><center>Nenhum computador cadastrado.</center></td></tr>
+        <tr><td><center><a href="/Computer/Cadastro" class="btn btn-sm btn-outline-success">+</a></center></td></tr>
+    </table>
 }
 else
 {
@@ -40,6 +43,9 @@ else
                     </th>
                 </tr>
             }
+            <tr>
+                <td colspan="3"><center><a href="/Computer/Cadastro" class="btn btn-sm btn-outline-success">+</a></center></td>
+            </tr>
         </tbody>
         
     </table>
