--- a/Views/Computer/Show.cshtml
+++ b/Views/Computer/Show.cshtml
@@ -4,8 +4,11 @@
     ViewData["Title"] = $"Computador {Model.Id}";
 }
 
+<a href="/Computer/Index" class="btn btn-primary btn-sm btn-light">< Voltar</a>
 <h1>@ViewData["Title"]</h1>
 
 <p><b>Id: </b> @Model.Id</p>
 <p><b>Ram: </b> @Model.Ram</p>
 <p><b>Processor: </b> @Model.Processor</p>
+
+<p><a href="/Computer/Atualizacao/@Model.Id" class="btn btn-primary btn-sm btn-dark">Atualizar</a>&nbsp;&nbsp;<a href="/Computer/Delete/@Model.Id" class="btn btn-primary btn-sm btn-danger">Excluir</a></p>
